--- a/jvm-packages/xgboost4j-example/pom.xml
+++ b/jvm-packages/xgboost4j-example/pom.xml
@@ -6,10 +6,10 @@
     <parent>
         <groupId>ml.dmlc</groupId>
         <artifactId>xgboost-jvm_2.12</artifactId>
-        <version>1.7.5-sovrn-no-openmp</version>
+        <version>1.7.5-sovrn-no-openmp-cpucache</version>
     </parent>
     <artifactId>xgboost4j-example_2.12</artifactId>
-    <version>1.7.5-sovrn-no-openmp</version>
+    <version>1.7.5-sovrn-no-openmp-cpucache</version>
     <packaging>jar</packaging>
     <build>
         <plugins>
