--- a/jvm-packages/xgboost4j-flink/pom.xml
+++ b/jvm-packages/xgboost4j-flink/pom.xml
@@ -6,10 +6,10 @@
     <parent>
         <groupId>ml.dmlc</groupId>
         <artifactId>xgboost-jvm_2.12</artifactId>
-        <version>1.7.5-sovrn-no-openmp</version>
+        <version>1.7.5-sovrn-no-openmp-cpucache</version>
     </parent>
     <artifactId>xgboost4j-flink_2.12</artifactId>
-    <version>1.7.5-sovrn-no-openmp</version>
+    <version>1.7.5-sovrn-no-openmp-cpucache</version>
     <build>
         <plugins>
             <plugin>
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>ml.dmlc</groupId>
             <artifactId>xgboost4j_${scala.binary.version}</artifactId>
-            <version>1.7.5-sovrn-no-openmp</version>
+            <version>1.7.5-sovrn-no-openmp-cpucache</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
