[CI] Various CI fixes (#11196)
* Fix dmlc/xgboost#10752 (#10972)

* Fix dmlc/xgboost#10752

* [CI] Replace Mambaforge -> Miniforge3

* Fix formatting

* Increase timeout for Multi-GPU approx tests. (#11111)

* Fix tests with the latest scikit-learn. (#11086)

* Fix tests with the latest scikit-learn.

* dask.

* Remove scikit-learn pin

---------

Co-authored-by: Philip Hyunsu Cho <chohyu01@cs.washington.edu>

* Revert base class change

* SYCL. Fix CI failures (#10987)

* [CI] Use Python 3.10 + latest sklearn in Windows

* Increase timeout in C++ tests from 1 to 5 seconds. (#10756)

To avoid CI failures on FreeBSD.

* [CI] Pin sklearn to 1.5.2

* [CI] Apply part of dmlc/xgboost#10434

---------

Co-authored-by: Jiaming Yuan <jm.yuan@outlook.com>
Co-authored-by: Dmitry Razdoburdin <d.razdoburdin@gmail.com>

--- a/tests/ci_build/conda_env/win64_test.yml
+++ b/tests/ci_build/conda_env/win64_test.yml
@@ -2,11 +2,11 @@ name: win64_env
 channels:
 - conda-forge
 dependencies:
-- python=3.8
+- python=3.10
 - numpy
 - scipy
 - matplotlib
-- scikit-learn
+- scikit-learn<=1.5.2
 - pandas
 - pytest
 - boto3
