--- a/tests/ci_build/Dockerfile.gpu
+++ b/tests/ci_build/Dockerfile.gpu
@@ -27,8 +27,7 @@ RUN \
         "nccl>=${NCCL_SHORT_VER}" \
         dask \
         dask-cuda=$RAPIDS_VERSION_ARG* dask-cudf=$RAPIDS_VERSION_ARG* cupy \
-        numpy pytest pytest-timeout scipy \
-        "scikit-learn<=1.5.2" \
+        numpy pytest pytest-timeout scipy scikit-learn \
         pandas matplotlib wheel python-kubernetes urllib3 graphviz "hypothesis<=6.112" \
         "pyspark>=3.4.0" cloudpickle cuda-python && \
     mamba clean --all && \
