--- a/jvm-packages/xgboost4j/pom.xml
+++ b/jvm-packages/xgboost4j/pom.xml
@@ -100,6 +100,12 @@
                             <argument>${use.cuda}</argument>
                             <argument>--use-openmp</argument>
                             <argument>${use.openmp}</argument>
+                            <argument>--use-debug</argument>
+                            <argument>${use.debug}</argument>
+                            <argument>--use-nvtx</argument>
+                            <argument>${use.nvtx}</argument>
+                            <argument>--plugin-rmm</argument>
+                            <argument>${plugin.rmm}</argument>
                           </arguments>
                           <workingDirectory>${user.dir}</workingDirectory>
                           <skip>${skip.native.build}</skip>
