--- a/python-package/pyproject.toml.in
+++ b/python-package/pyproject.toml.in
@@ -1,4 +1,3 @@
-# Update ops/xgboost-cpu as well if you you are changing this file.
 [build-system]
 requires = [
     "hatchling>=1.12.1",
@@ -10,7 +9,7 @@ build-backend = "packager.pep517"
 [project]
 name = "xgboost"
 description = "XGBoost Python Package"
-readme = { file = "README.rst", content-type = "text/x-rst" }
+readme = { file = {{ README.rst }}, content-type = "text/x-rst" }
 authors = [
     { name = "Hyunsu Cho", email = "chohyu01@cs.washington.edu" },
     { name = "Jiaming Yuan", email = "jm.yuan@outlook.com" }
@@ -33,6 +32,7 @@ classifiers = [
 dependencies = [
     "numpy",
     "scipy",
+{{ nccl }}
 ]
 
 [project.urls]
