--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,50 +14,6 @@ env:
     ${{ github.event.pull_request.number && 'PR-' }}${{ github.event.pull_request.number || github.ref_name }}
 
 jobs:
-  build-cpu:
-    name: Build CPU
-    runs-on:
-      - runs-on=${{ github.run_id }}
-      - runner=linux-amd64-cpu
-      - tag=main-build-cpu
-    steps:
-      # Restart Docker daemon so that it recognizes the ephemeral disks
-      - run: sudo systemctl restart docker
-      - uses: actions/checkout@v4
-        with:
-          submodules: "true"
-      - name: Log into Docker registry (AWS ECR)
-        run: bash ops/pipeline/login-docker-registry.sh
-      - run: bash ops/pipeline/build-cpu.sh
-      - name: Stash CLI executable
-        run: |
-          python3 ops/pipeline/manage-artifacts.py upload \
-            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} \
-            --prefix cache/${{ github.run_id }}/build-cpu \
-            ./xgboost
-
-  build-cpu-arm64:
-    name: Build CPU ARM64 + manylinux_2_28_aarch64 wheel
-    runs-on:
-      - runs-on=${{ github.run_id }}
-      - runner=linux-arm64-cpu
-      - tag=build-cpu-arm64
-    steps:
-      # Restart Docker daemon so that it recognizes the ephemeral disks
-      - run: sudo systemctl restart docker
-      - uses: actions/checkout@v4
-        with:
-          submodules: "true"
-      - name: Log into Docker registry (AWS ECR)
-        run: bash ops/pipeline/login-docker-registry.sh
-      - run: bash ops/pipeline/build-cpu-arm64.sh
-      - name: Stash files
-        run: |
-          python3 ops/pipeline/manage-artifacts.py upload \
-            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} \
-            --prefix cache/${{ github.run_id }}/build-cpu-arm64 \
-            ./xgboost python-package/dist/*.whl
-
   build-cuda:
     name: Build CUDA + manylinux_2_28_x86_64 wheel
     runs-on:
@@ -164,51 +120,9 @@ jobs:
       - run: bash ops/pipeline/build-gpu-rpkg.sh
 
 
-  test-cpp-gpu:
-    name: >-
-      Run Google Tests with GPUs
-      (Suite ${{ matrix.suite }}, Runner ${{ matrix.runner }})
-    needs: [build-cuda, build-cuda-with-rmm]
-    runs-on:
-      - runs-on
-      - runner=${{ matrix.runner }}
-      - run-id=${{ github.run_id }}
-      - tag=main-test-cpp-gpu-${{ matrix.suite }}
-    timeout-minutes: 30
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - suite: gpu
-            runner: linux-amd64-gpu
-            artifact_from: build-cuda
-          - suite: gpu-rmm
-            runner: linux-amd64-gpu
-            artifact_from: build-cuda-with-rmm
-          - suite: mgpu
-            runner: linux-amd64-mgpu
-            artifact_from: build-cuda
-    steps:
-      # Restart Docker daemon so that it recognizes the ephemeral disks
-      - run: sudo systemctl restart docker
-      - uses: actions/checkout@v4
-        with:
-          submodules: "true"
-      - name: Log into Docker registry (AWS ECR)
-        run: bash ops/pipeline/login-docker-registry.sh
-      - name: Unstash gtest
-        run: |
-          python3 ops/pipeline/manage-artifacts.py download \
-            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} \
-            --prefix cache/${{ github.run_id }}/${{ matrix.artifact_from }} \
-            --dest-dir build \
-            testxgboost
-          chmod +x build/testxgboost
-      - run: bash ops/pipeline/test-cpp-gpu.sh ${{ matrix.suite }}
-
   test-python-wheel:
     name: Run Python tests (${{ matrix.description }})
-    needs: [build-cuda, build-cpu-arm64]
+    needs: [build-cuda]
     runs-on:
       - runs-on
       - runner=${{ matrix.runner }}
@@ -229,16 +143,6 @@ jobs:
             suite: mgpu
             runner: linux-amd64-mgpu
             artifact_from: build-cuda
-          - description: cpu-amd64
-            image_repo: xgb-ci.cpu
-            suite: cpu
-            runner: linux-amd64-cpu
-            artifact_from: build-cuda
-          - description: cpu-arm64
-            image_repo: xgb-ci.aarch64
-            suite: cpu-arm64
-            runner: linux-arm64-cpu
-            artifact_from: build-cpu-arm64
     steps:
       # Restart Docker daemon so that it recognizes the ephemeral disks
       - run: sudo systemctl restart docker
