Cleanup PyPI variant script.

--- a/python-package/pyproject.toml
+++ b/python-package/pyproject.toml
@@ -73,7 +73,8 @@ disable = [
 dummy-variables-rgx = "(unused|)_.*"
 reports = false
 
-
+[tool.hatch.build.targets.wheel]
+packages = ["xgboost/"]
 
 [tool.pylint.basic]
 # Enforce naming convention
