--- a/R-package/DESCRIPTION
+++ b/R-package/DESCRIPTION
@@ -53,6 +53,9 @@ Suggests:
     DiagrammeR (>= 0.9.0),
     Ckmeans.1d.dp (>= 3.3.1),
     vcd (>= 1.3),
+    cplm,
+    e1071,
+    caret,
     testthat,
     lintr,
     igraph (>= 1.0.1),
