--- a/R-package/DESCRIPTION
+++ b/R-package/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: xgboost
 Type: Package
 Title: Extreme Gradient Boosting
-Version: 1.7.8.1
-Date: 2024-07-22
+Version: 1.7.9.1
+Date: 2025-03-25
 Authors@R: c(
   person("Tianqi", "Chen", role = c("aut"),
          email = "tianqi.tchen@gmail.com"),
@@ -53,6 +53,9 @@ Suggests:
     DiagrammeR (>= 0.9.0),
     Ckmeans.1d.dp (>= 3.3.1),
     vcd (>= 1.3),
+    cplm,
+    e1071,
+    caret,
     testthat,
     lintr,
     igraph (>= 1.0.1),
@@ -66,6 +69,6 @@ Imports:
     methods,
     data.table (>= 1.9.6),
     jsonlite (>= 1.0),
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 Encoding: UTF-8
 SystemRequirements: GNU make, C++17
