--- a/ops/conda_env/linux_sycl_test.yml
+++ b/ops/conda_env/linux_sycl_test.yml
@@ -4,7 +4,7 @@ channels:
 - https://software.repos.intel.com/python/conda/
 dependencies:
 - python=3.10
-- cmake>=3.26.4,!=3.30.0,<4.0.0
+- cmake
 - c-compiler
 - cxx-compiler
 - pip
