--- a/.github/workflows/r_tests.yml
+++ b/.github/workflows/r_tests.yml
@@ -46,8 +46,8 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-r-${{ matrix.r }}-8-${{ hashFiles('R-package/DESCRIPTION') }}
-          restore-keys: ${{ runner.os }}-r-${{ matrix.r }}-8-${{ hashFiles('R-package/DESCRIPTION') }}
+          key: ${{ runner.os }}-r-${{ matrix.r }}-9-${{ hashFiles('R-package/DESCRIPTION') }}
+          restore-keys: ${{ runner.os }}-r-${{ matrix.r }}-9-${{ hashFiles('R-package/DESCRIPTION') }}
       - uses: actions/setup-python@v5
         with:
           python-version: "3.10"
@@ -70,7 +70,7 @@ jobs:
     name: Test R package on Debian
     runs-on: ubuntu-latest
     container:
-      image: rhub/debian-gcc-release
+      image: rhub/ubuntu-release # rhub uses ubuntu for debian tests.
     steps:
       - name: Install system dependencies
         run: |
@@ -92,6 +92,7 @@ jobs:
         run: |
           python3 ops/script/test_r_package.py --r=/usr/bin/R --build-tool=autotools --task=check
       - uses: dorny/paths-filter@v3
+        # Run the document check if there are Changes in the R package.
         id: changes
         with:
           filters: |
