--- a/.github/workflows/r_tests.yml
+++ b/.github/workflows/r_tests.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Test R
         shell: bash -l {0}
         run: |
-          python3 ops/script/test_r_package.py --r=/usr/bin/R --build-tool=autotools --task=check
+          python3 ops/script/test_r_package.py --r=/opt/R/release/bin/R --build-tool=autotools --task=check
       - uses: dorny/paths-filter@v3
         # Run the document check if there are Changes in the R package.
         id: changes
