--- a/.github/workflows/r_tests.yml
+++ b/.github/workflows/r_tests.yml
@@ -72,14 +72,14 @@ jobs:
           apt update && apt install libcurl4-openssl-dev libssl-dev libssh2-1-dev libgit2-dev libglpk-dev libxml2-dev libharfbuzz-dev libfribidi-dev git librsvg2-dev librsvg2-2 pandoc -y
       - name: Trust git cloning project sources
         run: |
-          git config --global --add safe.directory '${GITHUB_WORKSPACE}'
+          git config --global --add safe.directory "${GITHUB_WORKSPACE}"
       - uses: actions/checkout@v4
         with:
           submodules: 'true'
       - name: Install dependencies
         shell: bash -l {0}
         run: |
-          Rscript -e 'source("./R-package/tests/helper_scripts/install_deps.R")'
+          Rscript -e "source('./R-package/tests/helper_scripts/install_deps.R')"
       - name: Test R
         shell: bash -l {0}
         run: |
