--- a/.github/workflows/i386.yml
+++ b/.github/workflows/i386.yml
@@ -14,7 +14,7 @@ jobs:
     name: Build 32-bit
     runs-on:
       - runs-on=${{ github.run_id }}
-      - runner=linux-amd64-cpu
+      - runner=new-linux-amd64-cpu
       - tag=i386-build-32bit
     steps:
       # Restart Docker daemon so that it recognizes the ephemeral disks
