--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     name: Build CPU
     runs-on:
       - runs-on=${{ github.run_id }}
-      - runner=linux-amd64-cpu
+      - runner=new-linux-amd64-cpu
       - tag=main-build-cpu
     steps:
       # Restart Docker daemon so that it recognizes the ephemeral disks
@@ -40,7 +40,7 @@ jobs:
     name: Build CUDA + manylinux_2_28_x86_64 wheel
     runs-on:
       - runs-on=${{ github.run_id }}
-      - runner=linux-amd64-cpu
+      - runner=new-linux-amd64-cpu
       - tag=main-build-cuda
     steps:
       # Restart Docker daemon so that it recognizes the ephemeral disks
@@ -63,7 +63,7 @@ jobs:
     name: Build CUDA with RMM
     runs-on:
       - runs-on=${{ github.run_id }}
-      - runner=linux-amd64-cpu
+      - runner=new-linux-amd64-cpu
       - tag=main-build-cuda-with-rmm
     steps:
       # Restart Docker daemon so that it recognizes the ephemeral disks
@@ -86,7 +86,7 @@ jobs:
     name: Build CUDA with RMM (dev)
     runs-on:
       - runs-on=${{ github.run_id }}
-      - runner=linux-amd64-cpu
+      - runner=new-linux-amd64-cpu
       - tag=main-build-cuda-with-rmm-dev
     steps:
       # Restart Docker daemon so that it recognizes the ephemeral disks
@@ -136,7 +136,7 @@ jobs:
         - arch: aarch64
           runner: linux-arm64-cpu
         - arch: x86_64
-          runner: linux-amd64-cpu
+          runner: new-linux-amd64-cpu
     steps:
       # Restart Docker daemon so that it recognizes the ephemeral disks
       - run: sudo systemctl restart docker
@@ -163,13 +163,13 @@ jobs:
           runner: linux-arm64-cpu
         - manylinux_target: manylinux2014
           arch: x86_64
-          runner: linux-amd64-cpu
+          runner: new-linux-amd64-cpu
         - manylinux_target: manylinux_2_28
           arch: aarch64
           runner: linux-arm64-cpu
         - manylinux_target: manylinux_2_28
           arch: x86_64
-          runner: linux-amd64-cpu
+          runner: new-linux-amd64-cpu
     steps:
       # Restart Docker daemon so that it recognizes the ephemeral disks
       - run: sudo systemctl restart docker
@@ -186,7 +186,7 @@ jobs:
     name: Build GPU-enabled R package
     runs-on:
       - runs-on=${{ github.run_id }}
-      - runner=linux-amd64-cpu
+      - runner=new-linux-amd64-cpu
       - tag=main-build-gpu-rpkg
     steps:
       # Restart Docker daemon so that it recognizes the ephemeral disks
@@ -214,13 +214,13 @@ jobs:
       matrix:
         include:
           - suite: gpu
-            runner: linux-amd64-gpu
+            runner: new-linux-amd64-gpu
             artifact_from: build-cuda
           - suite: gpu-rmm
-            runner: linux-amd64-gpu
+            runner: new-linux-amd64-gpu
             artifact_from: build-cuda-with-rmm
           - suite: mgpu
-            runner: linux-amd64-mgpu
+            runner: new-linux-amd64-mgpu
             artifact_from: build-cuda
     steps:
       # Restart Docker daemon so that it recognizes the ephemeral disks
@@ -256,17 +256,17 @@ jobs:
           - description: single-gpu
             image_repo: xgb-ci.gpu
             suite: gpu
-            runner: linux-amd64-gpu
+            runner: new-linux-amd64-gpu
             artifact_from: build-cuda
           - description: multiple-gpu
             image_repo: xgb-ci.gpu
             suite: mgpu
-            runner: linux-amd64-mgpu
+            runner: new-linux-amd64-mgpu
             artifact_from: build-cuda
           - description: cpu-amd64
             image_repo: xgb-ci.cpu
             suite: cpu
-            runner: linux-amd64-cpu
+            runner: new-linux-amd64-cpu
             artifact_from: build-cuda
           - description: cpu-arm64
             image_repo: xgb-ci.manylinux_2_28_aarch64
