Cleanup the softmax implementation and cub functions.
- Group cub function calls.
- Use linalg for the softmax implementation.

Cleanup data gen.

federated.

init.

[wip][mt] Implement vector intercept.

- Extract the fit intercept procedures from the learner.
- Implement vector transform in objectives.

Fix inc.

CPU build.

reverse.

more.

Fix.

check.

Cleanup.

rename.

Add test.

Fix test.

skip.

Cleanup.

copilot's suggestion.

error message.

Quantile.

error.

Fix test.

Adapt to the new base score.

Fix dart.

c++ tests.

lint.

federated.

sycl.

Fix old models.

lint.

Fix tests.

Sum weight.

debug msg.

Drop support for exporting scalar.

namespace.

tree.

Fixes.

Fix.

Fix tests.

Move ctor.

Fix tests.

Add tests.

lint.

Fix tests.

nvcc bug.

lint, fixes.

Cleanup.

skip optional weights.

check.

sycl.

cpu build.

Cleanup.

Fixes.

Set label shape.

Revert "Set label shape."

This reverts commit 3d21c7dc9e87d6d06fa22e579760332574b0abc3.

Fix.

Spark test.

--- a/R-package/src/Makevars.win.in
+++ b/R-package/src/Makevars.win.in
@@ -127,6 +127,7 @@ OBJECTS= \
     $(PKGROOT)/src/common/io.o \
     $(PKGROOT)/src/common/json.o \
     $(PKGROOT)/src/common/numeric.o \
+    $(PKGROOT)/src/common/optional_weight.o \
     $(PKGROOT)/src/common/pseudo_huber.o \
     $(PKGROOT)/src/common/quantile.o \
     $(PKGROOT)/src/common/random.o \
