--- a/.github/workflows/python_wheels_winarm64.yml
+++ b/.github/workflows/python_wheels_winarm64.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install wheel setuptools awscli
+          python -m pip install wheel setuptools awscli packaging
 
       - name: Build XGBoost for Win-ARM64
         run: |
@@ -42,8 +42,26 @@ jobs:
           cd build
           cmake .. -G"Visual Studio 17 2022" -A ARM64
           cmake --build . --config Release -- /m /nodeReuse:false "/consoleloggerparameters:ShowCommandLine;Verbosity=minimal"
+
+      - name: Build Python wheel xgboost for Win-ARM64
+        run: |
+          cd python-package
+          mkdir -p wheelhouse
+          pip wheel --no-deps -v . --wheel-dir wheelhouse/
+          $wheelFile = Get-ChildItem wheelhouse/*.whl | Select-Object -First 1 -ExpandProperty FullName
+          python -m wheel tags --python-tag py3 --abi-tag none --platform win_arm64 --remove $wheelFile
+
+      - name: Upload Python wheel xgboost
+        #if: github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/release_')
+        run: |
+          $wheelFile = Get-ChildItem python-package/wheelhouse/*.whl | Select-Object -First 1 -ExpandProperty FullName
+          python ops/pipeline/manage-artifacts.py upload `
+            --s3-bucket xgboost-nightly-builds `
+            --prefix ${{ env.BRANCH_NAME }}/${{ github.sha }} --make-public `
+            $wheelFile
+          Remove-Item -Path $wheelFile
           
-      - name: Build XGBoost Python wheel for Win-ARM64
+      - name: Build Python wheel xgboost-cpu for Win-ARM64
         run: |
           # Patch to rename pkg to xgboost-cpu
           python ops/script/pypi_variants.py --use-suffix=cpu --require-nccl-dep=na
@@ -53,14 +71,15 @@ jobs:
           $wheelFile = Get-ChildItem wheelhouse/*.whl | Select-Object -First 1 -ExpandProperty FullName
           python -m wheel tags --python-tag py3 --abi-tag none --platform win_arm64 --remove $wheelFile
 
-      - name: Upload Python wheel
-        if: github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/release_')
+      - name: Upload Python wheel xgboost-cpu
+        #if: github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/release_')
         run: |
           $wheelFile = Get-ChildItem python-package/wheelhouse/*.whl | Select-Object -First 1 -ExpandProperty FullName
           python ops/pipeline/manage-artifacts.py upload `
             --s3-bucket xgboost-nightly-builds `
             --prefix ${{ env.BRANCH_NAME }}/${{ github.sha }} --make-public `
             $wheelFile
+
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_IAM_S3_UPLOADER }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_IAM_S3_UPLOADER }}
