--- a/.github/workflows/python_wheels_macos.yml
+++ b/.github/workflows/python_wheels_macos.yml
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - os: macos-14
+        - os: macos-14-large
           platform_id: macosx_x86_64
         - os: macos-14
           platform_id: macosx_arm64
